tests/fails/offside_close_align.lt
var y = { 1
   ,
   2}
